--- a/src/test/java/org/teachingextensions/logo/tests/ColorGeneration.testHtmlDisplay.approved.html
+++ b/src/test/java/org/teachingextensions/logo/tests/ColorGeneration.testHtmlDisplay.approved.html
@@ -397,7 +397,7 @@
 	</tr>
 		<tr>
 		<td bgcolor="#C71585">MediumVioletRed</td>
-		<td bgcolor="#C71585">Purples, Reds, </td>
+		<td bgcolor="#C71585">Reds, Purples, </td>
 	</tr>
 		<tr>
 		<td bgcolor="#FF1493">DeepPink</td>
@@ -405,7 +405,7 @@
 	</tr>
 		<tr>
 		<td bgcolor="#DB7093">PaleVioletRed</td>
-		<td bgcolor="#DB7093">Purples, Reds, </td>
+		<td bgcolor="#DB7093">Reds, Purples, </td>
 	</tr>
 		<tr>
 		<td bgcolor="#FF00FF">Fuchsia</td>
@@ -539,7 +539,7 @@
 	</tr>
 		<tr>
 		<td bgcolor="#C71585">MediumVioletRed</td>
-		<td bgcolor="#C71585">Purples, Pinks, </td>
+		<td bgcolor="#C71585">Pinks, Purples, </td>
 	</tr>
 		<tr>
 		<td bgcolor="#CD5C5C">IndianRed</td>
@@ -551,7 +551,7 @@
 	</tr>
 		<tr>
 		<td bgcolor="#DB7093">PaleVioletRed</td>
-		<td bgcolor="#DB7093">Purples, Pinks, </td>
+		<td bgcolor="#DB7093">Pinks, Purples, </td>
 	</tr>
 		<tr>
 		<td bgcolor="#FA8072">Salmon</td>
